--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- <script src="./js/script-6.js" type="module"></script> -->
     <!-- <script src="./js/script-7.js" type="module"></script> -->
     <!-- <script src="./js/script-8.js" type="module"></script> -->
-    <script src="./js/script-9.js" type="module"></script>
+    <!-- <script src="./js/script-9.js" type="module"></script> -->
+    <script src="./js/test.js" type="module"></script>
   </body>
 </html>
